--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-        <title> </title>
+        <title></title>
     </head>
     <body>
-    Hello world.
+    <h1>Hello there.</h1>
+    <h2>Here, you will find out about me.</h2>
     </body>
 </html>
