--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title></title>
     </head>
     <body>
-    <h1>Hello there.</h1>
-    <h2>Here, you will find out about me.</h2>
+    <h1>Hello. Its me. I was wondering if after all these years you'd would like to know a bit more of me.</h1>
+    <h2>Here, you will find out about me and the memes i use.</h2>
     </body>
 </html>
