--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="colors.css">
+    <link rel="stylesheet" href="colleges.html">
         <title></title>
     </head>
     <body>
-    <h1>Hello. Its me. I was wondering if after all these years you'd would like to know a bit more of me.</h1>
+    <h1>Hello. It's me. I was wondering if after all these years you'd would like to know a bit more of me.</h1>
     <h2>Here, you will find out about me and the memes i use.</h2>
+    <button id="memes">Memes</button>
     </body>
 </html>
